# nullsh

./: .clang-format  .clang-tidy  .clangd  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
include/: version.h.in
include/nullsh/: builtins.h  capturer.h  cli.h  command.h  executor.h  parser.h  result_capturer.h  shell.h  util.h
src/: builtins.cpp  cli.cpp  command.cpp  executor.cpp  main.cpp  parser.cpp  result_capturer.cpp  shell.cpp  util.cpp
tests/: CMakeLists.txt  test_builtins.cpp  test_cli.cpp  test_command.cpp  test_executor.cpp  test_parser.cpp  test_result_capturer.cpp  test_shell.cpp  test_util.cpp
